--- a/docs/less/blocks/_base.less
+++ b/docs/less/blocks/_base.less
@@ -41,29 +41,6 @@ span {
 	text-transform: uppercase;
 }
 
-.section-title {
-	font-size: 14px;
-	font-weight: 700;
-	letter-spacing: 2.8px;
-	line-height: 1.2;
-	text-transform: uppercase;
-	color: #50e3a4;
-}
-
-.section-title.section-title--big {
-	font-size: 16px;
-	font-weight: 700;
-	letter-spacing: 3.2px;
-	line-height: 1.5;
-}
-
-.section-header {
-	font-size: 48px;
-	font-weight: 700;
-	line-height: 1.2;
-	color: #2e2e2e;
-}
-
 .nav-button {
 	position: relative;
 	width: 60px;
@@ -110,4 +87,34 @@ span {
 	text-align: center;
 	cursor: pointer;
 	transition: all 0.3s linear;
+}
+
+// titles
+
+.section-title {
+	font-size: 14px;
+	font-weight: 700;
+	letter-spacing: 2.8px;
+	line-height: 1.2;
+	text-transform: uppercase;
+	color: #50e3a4;
+}
+
+.section-title.section-title--big {
+	font-size: 16px;
+	font-weight: 700;
+	letter-spacing: 3.2px;
+	line-height: 1.5;
+
+	@media (min-width: 1200px) {}
+}
+
+.section-header {
+	font-size: 30px;
+	font-weight: 700;
+	line-height: 1.2;
+	color: #2e2e2e;
+
+	@media (min-width: 768px) {font-size: 42px;}
+	@media (min-width: 1200px) {font-size: 48px;}
 }
