--- a/docs/less/blocks/_benefits.less
+++ b/docs/less/blocks/_benefits.less
@@ -1,24 +1,35 @@
 .benefits {
-	width: 270px;
+	width: 100%;
+	@media (min-width: 1200px) {width: 270px;}
 }
 
 .benefits__img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	height: 100px;
-	margin: 0 0 25px;
+	margin: 0 0 5px;
+
+	@media (min-width: 768px) {margin: 0 0 20px;}
+	@media (min-width: 1200px) {margin: 0 0 25px;}
 }
 
 .benefits__title {
-	margin: 0 0 25px;
+	margin: 0 0 15px;
 	font-size: 16px;
 	line-height: 1.4;
 	text-align: center;
 	color: #2e2e2e;
+
+	@media (min-width: 1200px) {margin: 0 0 25px;}
 }
 
 .benefits__description {
 	font-size: 14px;
 	font-weight: 500;
-	line-height: 2.1;
+	line-height: 1.7;
 	text-align: center;
 	color: #808080;
+
+	@media (min-width: 1200px) {line-height: 2.1;}
 }
