--- a/docs/less/blocks/_functional.less
+++ b/docs/less/blocks/_functional.less
@@ -1,27 +1,64 @@
 .section-functional {
-	padding: 105px 0 65px;
-	background-image: url('../images/bg-particles.svg');
-	background-repeat: no-repeat;
-	background-position: center 70px;
-	background-size: auto;
+	padding: 70px 0 75px;
+
+	@media (min-width: 768px) {padding: 70px 0 90px;}
+
+	@media (min-width: 1200px) {
+		padding: 105px 0 65px;
+		background-image: url('../images/bg-particles.svg');
+		background-repeat: no-repeat;
+		background-position: center 70px;
+		background-size: auto;
+	}
 }
 
 .section-functional__title {
-	margin: 0 0 70px;
+	margin: 0 0 32px;
 	text-align: center;
+
+	@media (min-width: 768px) {margin: 0 0 23px;}
+	@media (min-width: 1200px) {margin: 0 0 70px;}
 }
 
 .section-functional__header {
-	margin: 0 0 85px;
+	margin: 0 0 25px;
 	text-align: center;
+
+	@media (min-width: 768px) {margin: 0 0 40px;}
+	@media (min-width: 1200px) {margin: 0 0 85px;}
 }
 
-.section-functional__benefits {display: flex;}
+.section-functional__benefits {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+
+	@media (min-width: 480px) {
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: stretch;
+	}
+
+	@media (min-width: 1200px) {
+		
+	}
+}
 
 .section-functional__benefits .benefits {
-	width: 270px;
-	padding: 0 20px;
-	margin: 0 30px 0 0;
+	max-width: 100%;
+	margin: 0 0 50px;
 
 	&:last-child {margin: 0;}
+
+	@media (min-width: 480px) {
+		max-width: 48%;
+		margin: 0;
+	}
+
+	@media (min-width: 1200px) {
+		width: 270px;
+		padding: 0 20px;
+		margin: 0 30px 0 0;
+	}
 }
