--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -215,19 +215,11 @@ span {
   color: #fff;
   background-color: #73ffc2;
   border-bottom: 4px solid #097f4c;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  transition: all 0.3s linear;
 }
 .section-cta__button:active {
   color: #fff;
   background-color: #35d48f;
   border-bottom: 4px solid #046139;
-  -webkit-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  transition: all 0.2s linear;
 }
 .plan:hover {
   -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1), 0 10px 30px rgba(0, 0, 0, 0.05);
@@ -841,14 +833,25 @@ header::before {
 }
 .section-cta {
   position: relative;
-  padding: 85px 0 90px;
+  padding: 70px 0 75px;
   background-color: #50e3a4;
-  background-image: url('../images/bg-cta.jpg');
+  background-image: url('../images/cta/bg-cta-mobile.jpg');
   background-repeat: no-repeat;
   -moz-background-size: cover;
        background-size: cover;
   background-position: center;
   color: #fff;
+}
+@media (min-width: 768px) {
+  .section-cta {
+    padding: 70px 0 80px;
+  }
+}
+@media (min-width: 1200px) {
+  .section-cta {
+    padding: 85px 0 90px;
+    background-image: url('../images/cta/bg-cta.jpg');
+  }
 }
 .section-cta::before {
   display: block;
@@ -866,13 +869,20 @@ header::before {
   text-align: center;
 }
 .section-cta__title {
-  margin: 0 0 50px;
+  margin: 0 0 40px;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .section-cta__title {
+    margin: 0 0 50px;
+  }
+}
+.cta-header {
   font-size: 22px;
   font-weight: 500;
   line-height: 1.3;
-  text-align: center;
 }
-.section-cta__title span {
+.cta-header span {
   font-weight: 700;
   letter-spacing: 2.2px;
 }
@@ -891,6 +901,10 @@ header::before {
   color: #2bb279;
   text-align: center;
   cursor: pointer;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 .section-administration {
   position: relative;
