--- a/docs/less/blocks/_cta.less
+++ b/docs/less/blocks/_cta.less
@@ -1,12 +1,19 @@
 .section-cta {
 	position: relative;
-	padding: 85px 0 90px;
+	padding: 70px 0 75px;
 	background-color: #50e3a4;
-	background-image: url('../images/bg-cta.jpg');
+	background-image: url('../images/cta/bg-cta-mobile.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	color: #fff;
+
+	@media (min-width: 768px) {padding: 70px 0 80px;}
+
+	@media (min-width: 1200px) {
+		padding: 85px 0 90px;
+		background-image: url('../images/cta/bg-cta.jpg');
+	}
 }
 
 .section-cta::before {
@@ -27,16 +34,21 @@
 }
 
 .section-cta__title {
-	margin: 0 0 50px;
+	margin: 0 0 40px;
+	text-align: center;
+
+	@media (min-width: 768px) {margin: 0 0 50px;}
+}
+
+.cta-header {
 	font-size: 22px;
 	font-weight: 500;
 	line-height: 1.3;
-	text-align: center;
-}
 
-.section-cta__title span {
-	font-weight: 700;
-	letter-spacing: 2.2px;
+	span {
+		font-weight: 700;
+		letter-spacing: 2.2px;
+	}
 }
 
 .section-cta__button {
@@ -52,4 +64,5 @@
 	color: #2bb279;
 	text-align: center;
 	cursor: pointer;	
+	transition: all 0.2s linear;
 }
